--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -25,15 +25,13 @@
   </header>
 
    <section id="hero" class="h-screen bg-gray-100 flex flex-col items-center justify-center px-6 relative overflow-hidden">
-    <!-- Image au centre -->
     <div class="flex items-center justify-center h-2/3">
       <img src="images/triplePhone.png"
            alt="Aperçu IAKOA"
            class="max-h-full w-auto object-contain drop-shadow-xl pointer-events-none select-none" />
     </div>
-    <!-- Bouton de scroll en bas au centre -->
     <div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 text-center animate-bounce z-10">
-      <button onclick="scrollToNextSection()" class="bg-white rounded-full shadow-lg p-3 hover:bg-gray-200 transition">
+      <button onclick="scrollToSectionFeatures()" class="bg-white rounded-full shadow-lg p-3 hover:bg-gray-200 transition">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
         </svg>
@@ -42,9 +40,9 @@
   </section>
 
   <!-- Section Présentation 1 -->
-  <section id="features" class="min-h-screen py-20 bg-white px-6" data-aos="fade-up">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-      <div>
+  <section id="features" class="relative min-h-screen py-20 bg-white px-6 flex flex-col items-center justify-center overflow-hidden" data-aos="zoom-in">
+    <div class="flex items-center justify-center h-2/3 w-full max-w-6xl mx-auto">
+      <div class="w-full md:w-1/2 mb-10 md:mb-0">
         <h2 class="text-3xl font-bold mb-4">Trouvez des évènements locaux</h2>
         <p class="text-gray-600 mb-4">
           IAKOA vous propose une sélection personnalisée d’évènements culturels, sportifs ou communautaires proches de vous.
@@ -55,12 +53,10 @@
           <li>Notifications intelligentes</li>
         </ul>
       </div>
-
-      <div class="relative w-full max-w-md mx-auto md:mx-0" style="max-width: 320px;">
+      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 320px;">
         <img src="images/iphone16eHome.png"
              alt="Aperçu IAKOA"
              class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
-
         <video autoplay loop muted playsinline
                class="absolute top-[14%] left-[11%] w-[78%] h-[74%] object-cover rounded-lg">
           <source src="videos/researchHome.MP4" type="video/mp4" />
@@ -68,12 +64,19 @@
         </video>
       </div>
     </div>
+    <div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 text-center animate-bounce z-10">
+      <button onclick="scrollToSectionPro()" class="bg-white rounded-full shadow-lg p-3 hover:bg-gray-200 transition">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+      </button>
+    </div>
   </section>
 
   <!-- Section Présentation 2 -->
-  <section class="min-h-screen py-20 bg-gray-50 px-6" data-aos="fade-up">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-      <div class="md:order-2">
+  <section id="pro" class="relative min-h-screen py-20 bg-gray-50 px-6 flex flex-col items-center justify-center overflow-hidden mt-16" data-aos="fade-up">
+    <div class="flex items-center justify-center h-2/3 w-full max-w-6xl mx-auto">
+      <div class="w-full md:w-1/2 mb-10 md:mb-0 md:order-2">
         <h2 class="text-3xl font-bold mb-4">Pourquoi utiliser IAKOA ?</h2>
         <p class="text-gray-600 mb-4">
           En tant que professionnel, créez vos propres évènements parmi 70 catégories, rendez-vous plus visible pour vos events, rapide et facile à utiliser.
@@ -84,14 +87,14 @@
           <li>Interface rapide et intuitive</li>
         </ul>
       </div>
-      <div class="md:order-1">
+      <div class="w-full md:w-1/2 flex items-center justify-center md:order-1">
         <img src="images/mappage.png" alt="Interface application IAKOA" class="w-full max-w-xs mx-auto shadow-lg" data-aos="flip-right" />
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer id="footer" class="bg-blue-500 text-white py-6 px-6" data-aos="fade-up">
+  <footer id="footer" class="bg-blue-500 text-white py-6 px-6 mt-16" data-aos="fade-up">
     <div class="max-w-6xl mx-auto text-center space-y-4">
       <h3 class="text-xl font-semibold">Téléchargez l’application IAKOA</h3>
       <a href="#" class="inline-block bg-white text-blue-500 font-bold py-2 px-5 rounded-lg shadow hover:bg-gray-200 transition">
@@ -107,7 +110,19 @@
       <p class="text-sm text-blue-200 mt-4">© 2025 IAKOA. Tous droits réservés.</p>
     </div>
   </footer>
-
+  <script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          iakoa: {
+            blue: '#2397FF'
+          }
+        }
+      }
+    }
+  }
+</script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
 
