--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -40,7 +40,7 @@
   </section>
 
   <!-- Section Présentation 1 -->
-  <section id="features" class="relative min-h-screen py-20 bg-white px-6 flex flex-col items-center justify-center overflow-hidden" data-aos="zoom-in">
+   <section id="features" class="h-screen bg-gray-100 flex flex-col items-center justify-center px-6 relative overflow-hidden">
     <div class="flex items-center justify-center h-2/3 w-full max-w-6xl mx-auto">
       <div class="w-full md:w-1/2 mb-10 md:mb-0">
         <h2 class="text-3xl font-bold mb-4">Trouvez des évènements locaux</h2>
@@ -54,15 +54,18 @@
         </ul>
       </div>
       <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 320px;">
-        <img src="images/iphone16eHome.png"
-             alt="Aperçu IAKOA"
-             class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
-        <video autoplay loop muted playsinline
-               class="absolute top-[14%] left-[11%] w-[78%] h-[74%] object-cover rounded-lg">
-          <source src="videos/researchHome.MP4" type="video/mp4" />
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="images/mockupempty.png"
+            alt="Aperçu IAKOA"
+            class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
+        <div class="absolute inset-0 p-[5%]">
+          <video autoplay loop muted playsinline
+                class="w-full h-full object-cover rounded-[50px]">
+            <source src="images/researchHome.MP4" type="video/mp4" />
+            Votre navigateur ne supporte pas la vidéo.
+          </video>
+        </div>
       </div>
+
     </div>
     <div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 text-center animate-bounce z-10">
       <button onclick="scrollToSectionPro()" class="bg-white rounded-full shadow-lg p-3 hover:bg-gray-200 transition">
@@ -74,7 +77,7 @@
   </section>
 
   <!-- Section Présentation 2 -->
-  <section id="pro" class="relative min-h-screen py-20 bg-gray-50 px-6 flex flex-col items-center justify-center overflow-hidden mt-16" data-aos="fade-up">
+   <section id="pro" class="h-screen bg-gray-100 flex flex-col items-center justify-center px-6 relative overflow-hidden">
     <div class="flex items-center justify-center h-2/3 w-full max-w-6xl mx-auto">
       <div class="w-full md:w-1/2 mb-10 md:mb-0 md:order-2">
         <h2 class="text-3xl font-bold mb-4">Pourquoi utiliser IAKOA ?</h2>
@@ -103,7 +106,7 @@
 
       <div class="flex justify-center space-x-6 mt-4">
         <a href="https://github.com/vlldnt/" class="hover:text-blue-300 transition">Github</a>
-        <a href="#" class="hover:text-blue-300 transition">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/adrien-vieilledent-791b39346/" class="hover:text-blue-300 transition">LinkedIn</a>
         <a href="#" class="hover:text-blue-300 transition">Contact</a>
       </div>
 
