--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -15,7 +15,12 @@
   <header id="mainHeader" class="fixed top-0 left-0 w-full bg-white shadow z-50 transition-transform duration-500" data-aos="fade-down">
     <div class="max-w-5xl mx-auto flex items-center justify-between px-6 py-4">
       <img src="images/logo-iakoa.svg" alt="Logo IAKOA" class="h-10 md:h-12" data-aos="fade-right" />
-      <nav class="space-x-6 text-gray-700 font-medium" data-aos="fade-left" data-aos-delay="200">
+      <button id="menuToggle" class="block md:hidden text-gray-700 focus:outline-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+      <nav id="menu" class="hidden md:flex space-x-6 text-gray-700 font-medium" data-aos="fade-left" data-aos-delay="200">
         <a href="#hero" class="hover:text-sky-500 transition">Accueil</a>
         <a href="#features" class="hover:text-sky-500 transition">Fonctionnalités</a>
         <a href="#pro" class="hover:text-sky-500 transition">Pourquoi IAKOA</a>
@@ -23,20 +28,28 @@
       </nav>
     </div>
   </header>
+  <script>
+    const menuToggle = document.getElementById('menuToggle');
+    const menu = document.getElementById('menu');
+
+    menuToggle.addEventListener('click', () => {
+      menu.classList.toggle('hidden');
+    });
+  </script>
 
   <!-- Hero Section -->
   <section id="hero" class="relative min-h-[700px] md:h-screen bg-gray-100 flex items-center justify-center overflow-hidden px-6">
     <div class="w-full max-w-6xl h-full flex flex-col md:flex-row items-center justify-between px-4 md:px-10 relative overflow-hidden">
       <div id="hero-image" class="w-full md:w-1/2 flex items-center justify-center z-20 mb-8 md:mb-0" data-aos="zoom-in-right">
         <img src="images/tripiphone.png" alt="Aperçu IAKOA"
-          class="w-full max-w-[400px] md:w-[200%] h-auto object-contain drop-shadow-xl select-none pointer-events-none transition-all duration-1000 ease-out"
+          class="w-full max-w-[600px] md:w-[250%] h-auto object-contain drop-shadow-xl select-none pointer-events-none transition-all duration-1000 ease-out"
           id="hero-img" />
       </div>
       <div id="hero-text"
         class="w-full md:w-1/2 flex flex-col items-end md:items-end justify-center space-y-6 pr-0 md:pr-6 opacity-0 translate-x-10 transition-all duration-1000 ease-out z-10"
         data-aos="fade-left" data-aos-delay="300">
         <img src="images/logo-iakoa.svg" alt="Logo IAKOA" class="w-60 md:w-80 h-auto mb-4" />
-        <p id="herotext" class="text-gray-800 text-3xl md:text-5xl font-extrabold leading-tight text-center md:text-right">
+        <p id="herotext" class="text-gray-800 text-3xl md:text-6xl font-extrabold leading-tight text-center md:text-right">
           LES ÉVÈNEMENTS<br>PROCHES DE<br>CHEZ VOUS
         </p>
       </div>
@@ -54,7 +67,7 @@
   <section id="features" class="min-h-[700px] md:h-screen bg-white flex flex-col items-center justify-center px-6 relative overflow-hidden">
     <div class="flex flex-col md:flex-row items-center justify-center h-auto md:h-2/3 w-full max-w-6xl mx-auto p-4 md:p-10">
       <div class="w-full md:w-1/2 mb-10 md:mb-0" data-aos="fade-right">
-        <h2 class="text-5xl font-bold mb-4">Trouvez des évènements locaux</h2>
+        <h2 class="text-6xl font-extrabold mb-4">Trouvez des évènements locaux</h2>
         <p class="text-gray-600 mb-4">
           IAKOA vous propose une sélection personnalisée d’évènements culturels, sportifs ou communautaires proches de vous.
         </p>
@@ -64,7 +77,7 @@
           <li data-aos="fade-up" data-aos-delay="300">70 catégories différentes</li>
         </ul>
       </div>
-      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 320px;" data-aos="zoom-in-left" data-aos-delay="400">
+      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 240px;" data-aos="zoom-in-left" data-aos-delay="400">
         <img src="images/mockupempty.png" alt="Aperçu IAKOA" class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
         <div class="absolute inset-0 p-[5%]">
           <video autoplay loop muted playsinline class="w-full h-full object-cover rounded-[48px]">
@@ -88,9 +101,9 @@
 
   <!-- Pro Section -->
   <section id="pro" class="min-h-[700px] md:h-screen bg-gray-100 flex flex-col items-center justify-center px-6 relative overflow-hidden">
-    <div class="flex flex-col md:flex-row items-center justify-center h-auto md:h-2/3 w-full max-w-6xl mx-auto">
+    <div class="flex flex-col md:flex-row items-center justify-center h-auto md:h-full w-full max-w-7xl mx-auto">
       <div class="w-full md:w-1/2 mb-10 md:mb-0 md:order-2 p-4 md:p-10" data-aos="fade-left">
-        <h2 class="text-5xl font-bold mb-4">Pourquoi utiliser IAKOA ?</h2>
+        <h2 class="text-6xl font-extrabold mb-4">Pourquoi utiliser IAKOA ?</h2>
         <p class="text-gray-600 mb-4">
           En tant que professionnel, créez vos propres évènements parmi 70 catégories, rendez-vous plus visible pour vos events, rapide et facile à utiliser.
         </p>
@@ -100,8 +113,8 @@
           <li data-aos="fade-up" data-aos-delay="300">Interface rapide et intuitive</li>
         </ul>
       </div>
-      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 320px;" data-aos="zoom-in-right" data-aos-delay="400">
-        <img src="images/mappage.png" alt="Aperçu IAKOA" class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
+      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 1000px;" data-aos="zoom-in-right" data-aos-delay="400">
+        <img src="images/toulousePins.png" alt="Aperçu IAKOA" class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
       </div>
     </div>
   </section>
