--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <link rel="icon" href="images/icon-iakoa.png" type="image/svg+xml">
+  <link rel="icon" href="images/icon-iakoa.svg" type="image/svg+xml">
 </head>
 
 <body class="bg-white text-gray-800">
@@ -92,12 +92,12 @@
           <li data-aos="fade-up" data-aos-delay="300">70 catégories différentes</li>
         </ul>
       </div>
-      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 240px;"
+      <div class="relative w-full md:w-1/2 flex items-center justify-center" style="max-width: 280px;"
         data-aos="zoom-in-left" data-aos-delay="400">
         <img src="images/mockupempty.png" alt="Aperçu IAKOA"
           class="w-full h-auto drop-shadow-xl pointer-events-none select-none" />
         <div class="absolute inset-0 p-[5%]">
-          <video autoplay loop muted playsinline class="w-full h-full object-cover rounded-[48px]">
+          <video autoplay loop muted playsinline class="w-full h-full object-cover rounded-[36px]">
             <source src="images/researchHome.MP4" type="video/mp4" />
             Votre navigateur ne supporte pas la vidéo.
           </video>
